--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -166,6 +166,8 @@
       "confirmFailed": "Не удалось подтвердить оплату",
       "paymentCancelled": "Оплата отменена",
       "paymentFailed": "Оплата не прошла",
+      "purchaseSuccess": "Покупка успешно завершена",
+      "purchaseTimeout": "Не удалось подтвердить покупку. Попробуйте ещё раз.",
       "readAccessRequired": "Купите книгу, чтобы прочитать её.",
       "listenAccessRequired": "Купите книгу, чтобы слушать аудиоверсию.",
       "downloadFailed": "Не удалось загрузить файл книги. Попробуйте позже."
