--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -275,7 +275,22 @@
       "saleBuyer": "Покупатель ID: {{id}}",
       "salePayment": "ID платежа: {{id}}",
       "salePurchasedAt": "Оплачено {{value}}",
-      "loadError": "Не удалось загрузить опубликованные книги."
+      "loadError": "Не удалось загрузить опубликованные книги.",
+      "details": {
+        "title": "Детали опубликованной книги",
+        "subtitle": "Статистика продаж и список покупателей.",
+        "back": "Назад к опубликованным книгам",
+        "loading": "Загружаем информацию о книге...",
+        "loadError": "Не удалось загрузить данные этой книги.",
+        "notFound": "Книга недоступна.",
+        "info": "Информация о книге",
+        "buyers": "Покупатели",
+        "earnings": "Заработано всего: {{value}} {{currency}}",
+        "salesCount": "{{count}} продажа",
+        "salesCount_few": "{{count}} продажи",
+        "salesCount_many": "{{count}} продаж",
+        "salesCount_other": "{{count}} продаж"
+      }
     },
     "myBooks": {
       "title": "Моя TON-полка",
