--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -269,6 +269,7 @@
       "languageUnknown": "Неизвестно",
       "publishedAt": "Опубликовано {{value}}",
       "price": "Цена: {{value}} {{currency}}",
+      "payoutBalance": "Остаток выплаты: {{value}} звёзд",
       "viewDetails": "Показать детали",
       "hideDetails": "Скрыть детали",
       "noSales": "Продаж пока нет",
@@ -286,6 +287,7 @@
         "info": "Информация о книге",
         "buyers": "Покупатели",
         "earnings": "Заработано всего: {{value}} {{currency}}",
+        "payoutBalance": "Остаток выплаты: {{value}} звёзд",
         "salesCount": "{{count}} продажа",
         "salesCount_few": "{{count}} продажи",
         "salesCount_many": "{{count}} продаж",
