--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -27,6 +27,12 @@
       "select": "Выберите кошелёк"
     }
   },
+  "navigation": {
+    "label": "Основное меню",
+    "account": "Мой аккаунт",
+    "books": "Книги",
+    "settings": "Настройки"
+  },
   "footer": {
     "languageLabel": "Язык интерфейса на"
   },
@@ -102,6 +108,12 @@
     "confirm": "Оформить",
     "showMore": "Показать ещё",
     "cancel": "Отмена"
+  },
+  "settings": {
+    "title": "Настройки",
+    "language": "Язык приложения",
+    "languageNote": "Переключатель ниже сразу применяет выбранный язык.",
+    "description": "Мы работаем над новыми опциями — скоро здесь появятся дополнительные настройки."
   },
   "book": {
     "cardAria": "Книга {{title}}",
