--- a/src/shared/config/i18n/locales/en/translation.json
+++ b/src/shared/config/i18n/locales/en/translation.json
@@ -8,7 +8,7 @@
   },
   "splashScreen": {
     "title": "Digital Library of Alexandria",
-    "decentralizedBy": "decentralized by"
+    "decentralizedBy": "decentralized by Walrus"
   },
   "languages": {
     "en": "English",
@@ -102,7 +102,7 @@
   "buttons": {
     "retry": "Retry",
     "goHome": "Go home",
-    "read": "Read",
+    "read": "Read \uD83D\uDCD6",
     "download": "Download",
     "buy": "Buy",
     "subscribe": "Subscribe",
@@ -147,13 +147,13 @@
       "subscribe": "Subscription"
     },
     "actions": {
-      "read": "Read",
+      "read": "Read \uD83D\uDCD6",
       "download": "Download",
       "buy": "Buy",
       "subscribe": "Subscribe",
-      "listen": "Listen",
-      "preview": "Preview",
-      "previewAudio": "Preview audio",
+      "listen": "Listen \uD83D\uDC42",
+      "preview": "Preview \uD83D\uDCD6",
+      "previewAudio": "Preview audio \uD83D\uDC42",
       "confirm": "Complete",
       "like": "Like \"{{title}}\"",
       "unlike": "Remove like from \"{{title}}\""
@@ -328,7 +328,7 @@
         "liked": "Liked"
       },
       "actions": {
-        "read": "Read",
+        "read": "Read \uD83D\uDCD6",
         "download": "Download"
       },
       "like": "Like \"{{title}}\"",
