--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -98,7 +98,7 @@
     "retry": "Повторить",
     "goHome": "На главную",
     "read": "Читать",
-    "download": "Скачать",
+    "download": "Скачать ⬇\uFE0F",
     "buy": "Купить",
     "subscribe": "Подписаться",
     "search": "Поиск",
@@ -143,7 +143,7 @@
     },
     "actions": {
       "read": "Читать \uD83D\uDCD6",
-      "download": "Скачать",
+      "download": "Скачать ⬇\uFE0F",
       "buy": "Купить",
       "subscribe": "Подписаться",
       "listen": "Слушать \uD83D\uDC42",
@@ -333,7 +333,7 @@
       },
       "actions": {
         "read": "Читать",
-        "download": "Скачать"
+        "download": "Скачать ⬇\uFE0F"
       },
       "like": "Поставить лайк книге «{{title}}»",
       "unlike": "Убрать лайк с книги «{{title}}»",
@@ -494,7 +494,7 @@
         "approve": "Одобрить",
         "reject": "Отклонить",
         "viewDetails": "Подробнее",
-        "download": "Скачать книгу"
+        "download": "Скачать книгу ⬇\uFE0F"
       },
       "downloadError": "Не удалось скачать рукопись. Попробуйте позже.",
       "price": "Цена: {{value}} ⭐",
@@ -532,7 +532,7 @@
       "manuscript": "Рукопись",
       "cover": "Обложка",
       "audiobook": "Аудиокнига",
-      "download": "Скачать рукопись",
+      "download": "Скачать рукопись ⬇\uFE0F",
       "read": "Читать в читалке",
       "listen": "Слушать в приложении",
       "noDownload": "Файл хранится в децентрализованном хранилище Walrus",
