--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -265,7 +265,6 @@
   },
   "account": {
     "title": "Личный кабинет",
-    "subtitle": "Управляйте своими TON NFT и делитесь новыми историями.",
     "telegramUserId": "Telegram ID: {{id}}",
     "telegramUserIdUnavailable": "Telegram ID недоступен",
     "publishedBooks": "Опубликованные книги",
@@ -481,7 +480,7 @@
       "title": "Редакторское голосование",
       "description": "Оцените новые заявки и решите их судьбу.",
       "threshold": "Для одобрения нужно {{required}} подтверждения. Допущенных голосующих: {{count}}.",
-      "notAllowed": "Голосовать могут только @lawyerdsupport и @oxfrrdd.",
+      "notAllowed": "Голосовать могут только для учасников Сообщества.",
       "empty": "Нет заявок, которые ждут вашего голоса.",
       "loading": "Загрузка заявок...",
       "loadError": "Не удалось загрузить заявки.",
