--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -360,7 +360,46 @@
         },
         "category": {
           "label": "Категория",
-          "placeholder": "Выберите жанр или подборку"
+          "placeholder": "Выберите жанр или подборку",
+          "options": {
+            "book": {
+              "novels": "Романы / художественная литература",
+              "philosophy": "Философия",
+              "scienceFiction": "Научная фантастика",
+              "fantasy": "Фэнтези",
+              "mystery": "Детективы и триллеры",
+              "nonFiction": "Нон-фикшн",
+              "selfHelp": "Саморазвитие и психология",
+              "history": "История",
+              "biographies": "Биографии и мемуары",
+              "business": "Бизнес и финансы",
+              "children": "Детская литература"
+            },
+            "article": {
+              "news": "Новости и политика",
+              "scienceTech": "Наука и технологии",
+              "business": "Бизнес и экономика",
+              "education": "Образование",
+              "sports": "Спорт",
+              "entertainment": "Развлечения (кино, музыка, шоу-бизнес)",
+              "travel": "Путешествия",
+              "lifestyle": "Образ жизни",
+              "health": "Здоровье и медицина",
+              "culture": "Культура и искусство"
+            },
+            "comics": {
+              "superheroes": "Супергерои",
+              "manga": "Манга",
+              "fantasy": "Фэнтези",
+              "scienceFiction": "Научная фантастика",
+              "horror": "Ужасы",
+              "adventure": "Приключения",
+              "comedy": "Комедия / сатира",
+              "crime": "Криминал / нуар",
+              "romance": "Романтика",
+              "historical": "Исторические комиксы"
+            }
+          }
         },
         "free": {
           "label": "Бесплатно?",
