--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -186,6 +186,8 @@
       "purchaseTimeout": "Не удалось подтвердить покупку. Попробуйте ещё раз.",
       "readAccessRequired": "Купите книгу, чтобы прочитать её.",
       "listenAccessRequired": "Купите книгу, чтобы слушать аудиоверсию.",
+      "previewChapters": "Вы читаете превью: доступны первые две главы, остальные — платные.",
+      "previewAudio": "Вы слушаете урезанный фрагмент всей аудиокниги.",
       "downloadFailed": "Не удалось загрузить файл книги. Попробуйте позже."
     },
     "listen": {
