Add labeled 15-second seek controls with icons

--- a/src/shared/config/i18n/locales/en/translation.json
+++ b/src/shared/config/i18n/locales/en/translation.json
@@ -200,7 +200,9 @@
       "back": "Back",
       "unavailable": "We couldn't find the audiobook for this book.",
       "unsupported": "Your browser does not support audio playback.",
-      "speed": "Speed"
+      "speed": "Speed",
+      "seekBackward": "Rewind {{seconds}}s",
+      "seekForward": "Forward {{seconds}}s"
     },
     "purchase": {
       "statusTitle": "Purchase details",
