--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -195,7 +195,9 @@
       "back": "Назад",
       "unavailable": "Не удалось найти аудиоверсию этой книги.",
       "unsupported": "Ваш браузер не поддерживает воспроизведение аудио.",
-      "speed": "Скорость"
+      "speed": "Скорость",
+      "seekBackward": "Отмотать на {{seconds}} с",
+      "seekForward": "Вперёд на {{seconds}} с"
     },
     "purchase": {
       "statusTitle": "Детали покупки",
