--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -112,6 +112,15 @@
     "title": "Настройки",
     "language": "Язык приложения",
     "languageNote": "Переключатель ниже сразу применяет выбранный язык.",
+    "contact": {
+      "title": "Свяжитесь с нами",
+      "description": "Нужна помощь или хотите получить выплаты? Напишите нам в Telegram.",
+      "button": "Написать @lawyerdsupport"
+    },
+    "about": {
+      "title": "О проекте",
+      "description": "Маркетплейс внутри телеграмма: 80% дохода от продаж получают авторы, антицензурное комьюнити делится доходами проекта."
+    },
     "description": "Мы работаем над новыми опциями — скоро здесь появятся дополнительные настройки."
   },
   "book": {
@@ -289,6 +298,7 @@
       "publishedAt": "Опубликовано {{value}}",
       "price": "Цена: {{value}} {{currency}}",
       "payoutBalance": "Остаток выплаты: {{value}} звёзд",
+      "requestPayout": "Получить выплаты",
       "viewDetails": "Показать детали",
       "hideDetails": "Скрыть детали",
       "noSales": "Продаж пока нет",
