--- a/src/shared/config/i18n/locales/en/translation.json
+++ b/src/shared/config/i18n/locales/en/translation.json
@@ -102,8 +102,8 @@
   "buttons": {
     "retry": "Retry",
     "goHome": "Go home",
-    "read": "Read \uD83D\uDCD6",
-    "download": "Download ⬇\uFE0F",
+    "read": "Read 📖",
+    "download": "Download ⬇️",
     "buy": "Buy",
     "subscribe": "Subscribe",
     "search": "Search",
@@ -124,7 +124,8 @@
     },
     "about": {
       "title": "About us",
-      "description": "A marketplace inside Telegram: authors receive 80% of sales revenue, and our anti-censorship community shares in the project's income."
+      "description": "A marketplace inside Telegram: authors receive 80% of sales revenue, and our anti-censorship community shares in the project's income.",
+      "storage": "We store books in a decentralized way through Walrus."
     },
     "description": "More options are on the way — stay tuned for additional settings."
   },
@@ -156,13 +157,13 @@
       "subscribe": "Subscription"
     },
     "actions": {
-      "read": "Read \uD83D\uDCD6",
-      "download": "Download ⬇\uFE0F",
+      "read": "Read 📖",
+      "download": "Download ⬇️",
       "buy": "Buy",
       "subscribe": "Subscribe",
-      "listen": "Listen \uD83D\uDC42",
-      "preview": "Preview \uD83D\uDCD6",
-      "previewAudio": "Preview audio \uD83D\uDC42",
+      "listen": "Listen 👂",
+      "preview": "Preview 📖",
+      "previewAudio": "Preview audio 👂",
       "confirm": "Complete",
       "like": "Like \"{{title}}\"",
       "unlike": "Remove like from \"{{title}}\""
@@ -342,8 +343,8 @@
         "liked": "Liked"
       },
       "actions": {
-        "read": "Read \uD83D\uDCD6",
-        "download": "Download ⬇\uFE0F"
+        "read": "Read 📖",
+        "download": "Download ⬇️"
       },
       "like": "Like \"{{title}}\"",
       "unlike": "Remove like from \"{{title}}\"",
@@ -355,7 +356,7 @@
     "publish": {
       "title": "Publish a new book",
       "description": "Prepare your manuscript and submit it for the marketplace.",
-      "restrictedAlert": "Only approved authors can submit book proposals \uD83D\uDEAB",
+      "restrictedAlert": "Only approved authors can submit book proposals 🚫",
       "form": {
         "name": {
           "label": "Book title",
@@ -457,24 +458,24 @@
               "title": "Plato",
               "quotes": [
                 {
-                  "english": "\u201cThe beginning is the most important part of the work.\u201d",
-                  "russian": "\u00ab\u041d\u0430\u0447\u0430\u043b\u043e \u2014 \u0441\u0430\u043c\u0430\u044f \u0432\u0430\u0436\u043d\u0430\u044f \u0447\u0430\u0441\u0442\u044c \u0440\u0430\u0431\u043e\u0442\u044b.\u00bb"
+                  "english": "“The beginning is the most important part of the work.”",
+                  "russian": "«Начало — самая важная часть работы.»"
                 },
                 {
-                  "english": "\u201cOpinion is the medium between knowledge and ignorance.\u201d",
-                  "russian": "\u00ab\u041c\u043d\u0435\u043d\u0438\u0435 \u2014 \u044d\u0442\u043e \u043d\u0435\u0447\u0442\u043e \u0441\u0440\u0435\u0434\u043d\u0435\u0435 \u043c\u0435\u0436\u0434\u0443 \u0437\u043d\u0430\u043d\u0438\u0435\u043c \u0438 \u043d\u0435\u0432\u0435\u0436\u0435\u0441\u0442\u0432\u043e\u043c.\u00bb"
+                  "english": "“Opinion is the medium between knowledge and ignorance.”",
+                  "russian": "«Мнение — это нечто среднее между знанием и невежеством.»"
                 },
                 {
-                  "english": "\u201cThe measure of a man is what he does with power.\u201d",
-                  "russian": "\u00ab\u041c\u0435\u0440\u0443 \u0447\u0435\u043b\u043e\u0432\u0435\u043a\u0430 \u043e\u043f\u0440\u0435\u0434\u0435\u043b\u044f\u0435\u0442 \u0442\u043e, \u043a\u0430\u043a \u043e\u043d \u0440\u0430\u0441\u043f\u043e\u0440\u044f\u0436\u0430\u0435\u0442\u0441\u044f \u0432\u043b\u0430\u0441\u0442\u044c\u044e.\u00bb"
+                  "english": "“The measure of a man is what he does with power.”",
+                  "russian": "«Меру человека определяет то, как он распоряжается властью.»"
                 },
                 {
-                  "english": "\u201cKnowledge becomes evil if the aim be not virtuous.\u201d",
-                  "russian": "\u00ab\u0417\u043d\u0430\u043d\u0438\u0435 \u0441\u0442\u0430\u043d\u043e\u0432\u0438\u0442\u0441\u044f \u0437\u043b\u043e\u043c, \u0435\u0441\u043b\u0438 \u0446\u0435\u043b\u044c \u0435\u0433\u043e \u043f\u0440\u0438\u043c\u0435\u043d\u0435\u043d\u0438\u044f \u043d\u0435 \u0434\u043e\u0431\u0440\u043e\u0434\u0435\u0442\u0435\u043b\u044c\u043d\u0430.\u00bb"
+                  "english": "“Knowledge becomes evil if the aim be not virtuous.”",
+                  "russian": "«Знание становится злом, если цель его применения не добродетельна.»"
                 },
                 {
-                  "english": "\u201cBe kind, for everyone you meet is fighting a hard battle.\u201d",
-                  "russian": "\u00ab\u0411\u0443\u0434\u044c \u0434\u043e\u0431\u0440\u044b\u043c, \u0432\u0435\u0434\u044c \u043a\u0430\u0436\u0434\u044b\u0439, \u043a\u043e\u0433\u043e \u0442\u044b \u0432\u0441\u0442\u0440\u0435\u0447\u0430\u0435\u0448\u044c, \u0432\u0435\u0434\u0451\u0442 \u0442\u0440\u0443\u0434\u043d\u0443\u044e \u0431\u043e\u0440\u044c\u0431\u0443.\u00bb"
+                  "english": "“Be kind, for everyone you meet is fighting a hard battle.”",
+                  "russian": "«Будь добрым, ведь каждый, кого ты встречаешь, ведёт трудную борьбу.»"
                 }
               ]
             },
@@ -482,24 +483,24 @@
               "title": "Aristotle",
               "quotes": [
                 {
-                  "english": "\u201cThe whole is greater than the sum of its parts.\u201d",
-                  "russian": "\u00ab\u0426\u0435\u043b\u043e\u0435 \u0431\u043e\u043b\u044c\u0448\u0435 \u0441\u0443\u043c\u043c\u044b \u0441\u0432\u043e\u0438\u0445 \u0447\u0430\u0441\u0442\u0435\u0439.\u00bb"
+                  "english": "“The whole is greater than the sum of its parts.”",
+                  "russian": "«Целое больше суммы своих частей.»"
                 },
                 {
-                  "english": "\u201cKnowing yourself is the beginning of all wisdom.\u201d",
-                  "russian": "\u00ab\u041f\u043e\u0437\u043d\u0430\u0442\u044c \u0441\u0435\u0431\u044f \u2014 \u043d\u0430\u0447\u0430\u043b\u043e \u0432\u0441\u044f\u043a\u043e\u0439 \u043c\u0443\u0434\u0440\u043e\u0441\u0442\u0438.\u00bb"
+                  "english": "“Knowing yourself is the beginning of all wisdom.”",
+                  "russian": "«Познать себя — начало всякой мудрости.»"
                 },
                 {
-                  "english": "\u201cWe are what we repeatedly do. Excellence, then, is not an act but a habit.\u201d",
-                  "russian": "\u00ab\u041c\u044b \u2014 \u0442\u043e, \u0447\u0442\u043e \u043c\u044b \u043f\u043e\u0441\u0442\u043e\u044f\u043d\u043d\u043e \u0434\u0435\u043b\u0430\u0435\u043c. \u0421\u043e\u0432\u0435\u0440\u0448\u0435\u043d\u0441\u0442\u0432\u043e, \u0441\u043b\u0435\u0434\u043e\u0432\u0430\u0442\u0435\u043b\u044c\u043d\u043e, \u043d\u0435 \u043f\u043e\u0441\u0442\u0443\u043f\u043e\u043a, \u0430 \u043f\u0440\u0438\u0432\u044b\u0447\u043a\u0430.\u00bb"
+                  "english": "“We are what we repeatedly do. Excellence, then, is not an act but a habit.”",
+                  "russian": "«Мы — то, что мы постоянно делаем. Совершенство, следовательно, не поступок, а привычка.»"
                 },
                 {
-                  "english": "\u201cHappiness depends upon ourselves.\u201d",
-                  "russian": "\u00ab\u0421\u0447\u0430\u0441\u0442\u044c\u0435 \u0437\u0430\u0432\u0438\u0441\u0438\u0442 \u043e\u0442 \u043d\u0430\u0441 \u0441\u0430\u043c\u0438\u0445.\u00bb"
+                  "english": "“Happiness depends upon ourselves.”",
+                  "russian": "«Счастье зависит от нас самих.»"
                 },
                 {
-                  "english": "\u201cThe more you know, the more you realize you don\u2019t know.\u201d",
-                  "russian": "\u00ab\u0427\u0435\u043c \u0431\u043e\u043b\u044c\u0448\u0435 \u0437\u043d\u0430\u0435\u0448\u044c, \u0442\u0435\u043c \u0431\u043e\u043b\u044c\u0448\u0435 \u043f\u043e\u043d\u0438\u043c\u0430\u0435\u0448\u044c, \u0447\u0442\u043e \u043d\u0438\u0447\u0435\u0433\u043e \u043d\u0435 \u0437\u043d\u0430\u0435\u0448\u044c.\u00bb"
+                  "english": "“The more you know, the more you realize you don’t know.”",
+                  "russian": "«Чем больше знаешь, тем больше понимаешь, что ничего не знаешь.»"
                 }
               ]
             }
@@ -543,7 +544,7 @@
         "approve": "Approve",
         "reject": "Reject",
         "viewDetails": "View details",
-        "download": "Download book ⬇\uFE0F"
+        "download": "Download book ⬇️"
       },
       "downloadError": "Could not download the manuscript. Try again later.",
       "price": "Price: {{value}} ⭐",
@@ -580,7 +581,7 @@
       "manuscript": "Manuscript",
       "cover": "Cover image",
       "audiobook": "Audiobook",
-      "download": "Download manuscript ⬇\uFE0F",
+      "download": "Download manuscript ⬇️",
       "read": "Read in the app",
       "listen": "Listen in the app",
       "noDownload": "File stored on Walrus decentralized storage",
