--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -47,22 +47,22 @@
     "categoryNotFound": "Категория не найдена",
     "bookNotFound": "Книга не найдена"
   },
-    "homeCategories": {
-      "title": "Категории",
-      "comingSoon": "Скоро появиться",
-      "searchPlaceholder": "Поиск по категориям",
-      "alphaBanner": {
-        "title": "Альфа-версия",
-        "description": "Многие функции не доступны."
-      },
-      "globalCategoryLabel": "Глобальная категория",
-      "emptyTitle": "Ничего не найдено",
-      "emptyDescription": "Попробуйте изменить запрос",
-      "popularBooksTitle": "Популярные книги",
-      "popularBooksEmptyTitle": "Пока нет популярных книг",
-      "popularBooksEmptyDescription": "Загляните позже — мы обновим подборку",
-      "popularBooksShowAll": "Все популярные"
+  "homeCategories": {
+    "title": "Категории",
+    "comingSoon": "Скоро появиться",
+    "searchPlaceholder": "Поиск по категориям",
+    "alphaBanner": {
+      "title": "Альфа-версия",
+      "description": "Многие функции не доступны."
     },
+    "globalCategoryLabel": "Глобальная категория",
+    "emptyTitle": "Ничего не найдено",
+    "emptyDescription": "Попробуйте изменить запрос",
+    "popularBooksTitle": "Популярные книги",
+    "popularBooksEmptyTitle": "Пока нет популярных книг",
+    "popularBooksEmptyDescription": "Загляните позже — мы обновим подборку",
+    "popularBooksShowAll": "Все популярные"
+  },
   "filters": {
     "searchPlaceholder": "Поиск по книгам",
     "sort": {
@@ -98,7 +98,7 @@
     "retry": "Повторить",
     "goHome": "На главную",
     "read": "Читать",
-    "download": "Скачать ⬇\uFE0F",
+    "download": "Скачать ⬇️",
     "buy": "Купить",
     "subscribe": "Подписаться",
     "search": "Поиск",
@@ -119,7 +119,8 @@
     },
     "about": {
       "title": "О проекте",
-      "description": "Маркетплейс внутри телеграмма: 80% дохода от продаж получают авторы, антицензурное комьюнити делится доходами проекта."
+      "description": "Маркетплейс внутри телеграмма: 80% дохода от продаж получают авторы, антицензурное комьюнити делится доходами проекта.",
+      "storage": "Мы храним книги децентрализованно через Walrus."
     },
     "description": "Мы работаем над новыми опциями — скоро здесь появятся дополнительные настройки."
   },
@@ -151,13 +152,13 @@
       "subscribe": "Подписка"
     },
     "actions": {
-      "read": "Читать \uD83D\uDCD6",
-      "download": "Скачать ⬇\uFE0F",
+      "read": "Читать 📖",
+      "download": "Скачать ⬇️",
       "buy": "Купить",
       "subscribe": "Подписаться",
-      "listen": "Слушать \uD83D\uDC42",
-      "preview": "Прочитать фрагмент \uD83D\uDCD6",
-      "previewAudio": "Прослушать отрывок \uD83D\uDC42",
+      "listen": "Слушать 👂",
+      "preview": "Прочитать фрагмент 📖",
+      "previewAudio": "Прослушать отрывок 👂",
       "confirm": "Оформить",
       "like": "Поставить лайк «{{title}}»",
       "unlike": "Убрать лайк с «{{title}}»"
@@ -347,7 +348,7 @@
       },
       "actions": {
         "read": "Читать",
-        "download": "Скачать ⬇\uFE0F"
+        "download": "Скачать ⬇️"
       },
       "like": "Поставить лайк книге «{{title}}»",
       "unlike": "Убрать лайк с книги «{{title}}»",
@@ -359,7 +360,7 @@
     "publish": {
       "title": "Опубликовать новую книгу",
       "description": "Подготовьте рукопись и отправьте её в маркетплейс TON",
-      "restrictedAlert": "Публиковать книги могут только авторы из утверждённого списка \uD83D\uDEAB",
+      "restrictedAlert": "Публиковать книги могут только авторы из утверждённого списка 🚫",
       "form": {
         "name": {
           "label": "Название книги",
@@ -461,24 +462,24 @@
               "title": "Платон",
               "quotes": [
                 {
-                  "english": "\u201cThe beginning is the most important part of the work.\u201d",
-                  "russian": "\u00ab\u041d\u0430\u0447\u0430\u043b\u043e \u2014 \u0441\u0430\u043c\u0430\u044f \u0432\u0430\u0436\u043d\u0430\u044f \u0447\u0430\u0441\u0442\u044c \u0440\u0430\u0431\u043e\u0442\u044b.\u00bb"
+                  "english": "“The beginning is the most important part of the work.”",
+                  "russian": "«Начало — самая важная часть работы.»"
                 },
                 {
-                  "english": "\u201cOpinion is the medium between knowledge and ignorance.\u201d",
-                  "russian": "\u00ab\u041c\u043d\u0435\u043d\u0438\u0435 \u2014 \u044d\u0442\u043e \u043d\u0435\u0447\u0442\u043e \u0441\u0440\u0435\u0434\u043d\u0435\u0435 \u043c\u0435\u0436\u0434\u0443 \u0437\u043d\u0430\u043d\u0438\u0435\u043c \u0438 \u043d\u0435\u0432\u0435\u0436\u0435\u0441\u0442\u0432\u043e\u043c.\u00bb"
+                  "english": "“Opinion is the medium between knowledge and ignorance.”",
+                  "russian": "«Мнение — это нечто среднее между знанием и невежеством.»"
                 },
                 {
-                  "english": "\u201cThe measure of a man is what he does with power.\u201d",
-                  "russian": "\u00ab\u041c\u0435\u0440\u0443 \u0447\u0435\u043b\u043e\u0432\u0435\u043a\u0430 \u043e\u043f\u0440\u0435\u0434\u0435\u043b\u044f\u0435\u0442 \u0442\u043e, \u043a\u0430\u043a \u043e\u043d \u0440\u0430\u0441\u043f\u043e\u0440\u044f\u0436\u0430\u0435\u0442\u0441\u044f \u0432\u043b\u0430\u0441\u0442\u044c\u044e.\u00bb"
+                  "english": "“The measure of a man is what he does with power.”",
+                  "russian": "«Меру человека определяет то, как он распоряжается властью.»"
                 },
                 {
-                  "english": "\u201cKnowledge becomes evil if the aim be not virtuous.\u201d",
-                  "russian": "\u00ab\u0417\u043d\u0430\u043d\u0438\u0435 \u0441\u0442\u0430\u043d\u043e\u0432\u0438\u0442\u0441\u044f \u0437\u043b\u043e\u043c, \u0435\u0441\u043b\u0438 \u0446\u0435\u043b\u044c \u0435\u0433\u043e \u043f\u0440\u0438\u043c\u0435\u043d\u0435\u043d\u0438\u044f \u043d\u0435 \u0434\u043e\u0431\u0440\u043e\u0434\u0435\u0442\u0435\u043b\u044c\u043d\u0430.\u00bb"
+                  "english": "“Knowledge becomes evil if the aim be not virtuous.”",
+                  "russian": "«Знание становится злом, если цель его применения не добродетельна.»"
                 },
                 {
-                  "english": "\u201cBe kind, for everyone you meet is fighting a hard battle.\u201d",
-                  "russian": "\u00ab\u0411\u0443\u0434\u044c \u0434\u043e\u0431\u0440\u044b\u043c, \u0432\u0435\u0434\u044c \u043a\u0430\u0436\u0434\u044b\u0439, \u043a\u043e\u0433\u043e \u0442\u044b \u0432\u0441\u0442\u0440\u0435\u0447\u0430\u0435\u0448\u044c, \u0432\u0435\u0434\u0451\u0442 \u0442\u0440\u0443\u0434\u043d\u0443\u044e \u0431\u043e\u0440\u044c\u0431\u0443.\u00bb"
+                  "english": "“Be kind, for everyone you meet is fighting a hard battle.”",
+                  "russian": "«Будь добрым, ведь каждый, кого ты встречаешь, ведёт трудную борьбу.»"
                 }
               ]
             },
@@ -486,24 +487,24 @@
               "title": "Аристотель",
               "quotes": [
                 {
-                  "english": "\u201cThe whole is greater than the sum of its parts.\u201d",
-                  "russian": "\u00ab\u0426\u0435\u043b\u043e\u0435 \u0431\u043e\u043b\u044c\u0448\u0435 \u0441\u0443\u043c\u043c\u044b \u0441\u0432\u043e\u0438\u0445 \u0447\u0430\u0441\u0442\u0435\u0439.\u00bb"
+                  "english": "“The whole is greater than the sum of its parts.”",
+                  "russian": "«Целое больше суммы своих частей.»"
                 },
                 {
-                  "english": "\u201cKnowing yourself is the beginning of all wisdom.\u201d",
-                  "russian": "\u00ab\u041f\u043e\u0437\u043d\u0430\u0442\u044c \u0441\u0435\u0431\u044f \u2014 \u043d\u0430\u0447\u0430\u043b\u043e \u0432\u0441\u044f\u043a\u043e\u0439 \u043c\u0443\u0434\u0440\u043e\u0441\u0442\u0438.\u00bb"
+                  "english": "“Knowing yourself is the beginning of all wisdom.”",
+                  "russian": "«Познать себя — начало всякой мудрости.»"
                 },
                 {
-                  "english": "\u201cWe are what we repeatedly do. Excellence, then, is not an act but a habit.\u201d",
-                  "russian": "\u00ab\u041c\u044b \u2014 \u0442\u043e, \u0447\u0442\u043e \u043c\u044b \u043f\u043e\u0441\u0442\u043e\u044f\u043d\u043d\u043e \u0434\u0435\u043b\u0430\u0435\u043c. \u0421\u043e\u0432\u0435\u0440\u0448\u0435\u043d\u0441\u0442\u0432\u043e, \u0441\u043b\u0435\u0434\u043e\u0432\u0430\u0442\u0435\u043b\u044c\u043d\u043e, \u043d\u0435 \u043f\u043e\u0441\u0442\u0443\u043f\u043e\u043a, \u0430 \u043f\u0440\u0438\u0432\u044b\u0447\u043a\u0430.\u00bb"
+                  "english": "“We are what we repeatedly do. Excellence, then, is not an act but a habit.”",
+                  "russian": "«Мы — то, что мы постоянно делаем. Совершенство, следовательно, не поступок, а привычка.»"
                 },
                 {
-                  "english": "\u201cHappiness depends upon ourselves.\u201d",
-                  "russian": "\u00ab\u0421\u0447\u0430\u0441\u0442\u044c\u0435 \u0437\u0430\u0432\u0438\u0441\u0438\u0442 \u043e\u0442 \u043d\u0430\u0441 \u0441\u0430\u043c\u0438\u0445.\u00bb"
+                  "english": "“Happiness depends upon ourselves.”",
+                  "russian": "«Счастье зависит от нас самих.»"
                 },
                 {
-                  "english": "\u201cThe more you know, the more you realize you don\u2019t know.\u201d",
-                  "russian": "\u00ab\u0427\u0435\u043c \u0431\u043e\u043b\u044c\u0448\u0435 \u0437\u043d\u0430\u0435\u0448\u044c, \u0442\u0435\u043c \u0431\u043e\u043b\u044c\u0448\u0435 \u043f\u043e\u043d\u0438\u043c\u0430\u0435\u0448\u044c, \u0447\u0442\u043e \u043d\u0438\u0447\u0435\u0433\u043e \u043d\u0435 \u0437\u043d\u0430\u0435\u0448\u044c.\u00bb"
+                  "english": "“The more you know, the more you realize you don’t know.”",
+                  "russian": "«Чем больше знаешь, тем больше понимаешь, что ничего не знаешь.»"
                 }
               ]
             }
@@ -547,7 +548,7 @@
         "approve": "Одобрить",
         "reject": "Отклонить",
         "viewDetails": "Подробнее",
-        "download": "Скачать книгу ⬇\uFE0F"
+        "download": "Скачать книгу ⬇️"
       },
       "downloadError": "Не удалось скачать рукопись. Попробуйте позже.",
       "price": "Цена: {{value}} ⭐",
@@ -585,7 +586,7 @@
       "manuscript": "Рукопись",
       "cover": "Обложка",
       "audiobook": "Аудиокнига",
-      "download": "Скачать рукопись ⬇\uFE0F",
+      "download": "Скачать рукопись ⬇️",
       "read": "Читать в читалке",
       "listen": "Слушать в приложении",
       "noDownload": "Файл хранится в децентрализованном хранилище Walrus",
