--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -122,6 +122,10 @@
       "description": "Маркетплейс внутри телеграмма: 80% дохода от продаж получают авторы, антицензурное комьюнити делится доходами проекта.",
       "storage": "Мы храним книги децентрализованно через Walrus."
     },
+    "community": {
+      "title": "Сообщество",
+      "description": "Вы можете участвовать в голосовании за новые книги и получать плавающий процент от заработка платформы. Свяжитесь с нами, чтобы подключить ваш аккаунт к программе сообщества."
+    },
     "description": "Мы работаем над новыми опциями — скоро здесь появятся дополнительные настройки."
   },
   "book": {
