--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -158,6 +158,8 @@
     "actions": {
       "read": "Читать 📖",
       "download": "Скачать ⬇️",
+      "share-read": "Поделиться Чтением ⬆\uFE0F",
+      "share-preview": "Поделиться Чтением ⬆\uFE0F",
       "buy": "Купить",
       "subscribe": "Подписаться",
       "listen": "Слушать 👂",
