--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -453,7 +453,7 @@
           "label": "Аудиокнига (необязательно)",
           "cta": "Загрузить аудио",
           "placeholder": "Аудиофайл не выбран",
-          "hint": "MP3, WAV или M4A до 50 МБ"
+          "hint": "MP3, WAV или M4A до 3 ГБ"
         },
         "file": {
           "label": "PDF-файл",
