--- a/src/shared/config/i18n/locales/en/translation.json
+++ b/src/shared/config/i18n/locales/en/translation.json
@@ -7,8 +7,8 @@
     }
   },
   "splashScreen": {
-    "title": "Digital Content Marketplace",
-    "decentralizedBy": "decentralized by Walrus"
+    "title": "Digital Books Marketplace",
+    "subtitle": "text and audio formats"
   },
   "languages": {
     "en": "English",
