--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -7,8 +7,8 @@
     }
   },
   "splashScreen": {
-    "title": "Полка Цифровых Товаров",
-    "decentralizedBy": "децентрализовано через Варлус"
+    "title": "Цифровая Книжная Полка",
+    "decentralizedBy": "текстовые и аудио форматы"
   },
   "languages": {
     "en": "Английский",
