--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -212,6 +212,8 @@
       "unavailable": "Не удалось найти аудиоверсию этой книги.",
       "unsupported": "Ваш браузер не поддерживает воспроизведение аудио.",
       "speed": "Скорость",
+      "play": "Слушать",
+      "pause": "Пауза",
       "seek": "Позиция воспроизведения",
       "seekBackward": "Отмотать на {{seconds}} с",
       "seekForward": "Вперёд на {{seconds}} с"
