--- a/src/shared/config/i18n/locales/en/translation.json
+++ b/src/shared/config/i18n/locales/en/translation.json
@@ -608,6 +608,7 @@
   },
   "reading-overlay": {
     "toggle-font-size": "Font-size",
+    "chapters": "Chapters",
     "selectionTitle": "Share this excerpt",
     "shareSelection": "Share",
     "clearSelection": "Clear"
