--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -607,6 +607,7 @@
   },
   "reading-overlay": {
     "toggle-font-size": "Шрифт",
+    "chapters": "Главы",
     "selectionTitle": "Поделиться цитатой",
     "shareSelection": "Поделиться",
     "clearSelection": "Сбросить"
