Hide header on reader and add Ukrainian language

--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -12,7 +12,8 @@
   },
   "languages": {
     "en": "Английский",
-    "ru": "Русский"
+    "ru": "Русский",
+    "uk": "Украинский"
   },
   "header": {
     "languageToggle": "Сменить язык (текущий: {{language}})",
