Add sharing toggle for audiobook position and simplify reader link

--- a/src/shared/config/i18n/locales/en/translation.json
+++ b/src/shared/config/i18n/locales/en/translation.json
@@ -221,6 +221,7 @@
       "play": "Play",
       "pause": "Pause",
       "seek": "Seek position",
+      "shareFromCurrent": "From current position?",
       "seekBackward": "Rewind {{seconds}}s",
       "seekForward": "Forward {{seconds}}s"
     },
