--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -216,6 +216,7 @@
       "play": "Слушать",
       "pause": "Пауза",
       "seek": "Позиция воспроизведения",
+      "shareFromCurrent": "С текущей точки?",
       "seekBackward": "Отмотать на {{seconds}} с",
       "seekForward": "Вперёд на {{seconds}} с"
     },
