--- a/src/shared/config/i18n/locales/uk/translation.json
+++ b/src/shared/config/i18n/locales/uk/translation.json
@@ -221,6 +221,7 @@
       "play": "Відтворити",
       "pause": "Пауза",
       "seek": "Перехід",
+      "shareFromCurrent": "З поточної точки?",
       "seekBackward": "Назад на {{seconds}}с",
       "seekForward": "Вперед на {{seconds}}с"
     },
