--- a/src/shared/config/i18n/locales/en/translation.json
+++ b/src/shared/config/i18n/locales/en/translation.json
@@ -386,7 +386,7 @@
           "placeholder": "Select the genre or collection",
           "options": {
             "book": {
-              "novels": "Novels / Literary Fiction",
+              "novels": "Novels",
               "philosophy": "Philosophy",
               "scienceFiction": "Science Fiction",
               "fantasy": "Fantasy",
