--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -390,7 +390,7 @@
           "placeholder": "Выберите жанр или подборку",
           "options": {
             "book": {
-              "novels": "Романы / художественная литература",
+              "novels": "Романы",
               "philosophy": "Философия",
               "scienceFiction": "Научная фантастика",
               "fantasy": "Фэнтези",
