--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -31,6 +31,7 @@
     "label": "Основное меню",
     "account": "Мой аккаунт",
     "books": "Книги",
+    "audiobooks": "Аудиокниги",
     "settings": "Настройки"
   },
   "footer": {
@@ -605,6 +606,15 @@
       "noAudiobook": "Аудиоверсия не прикладывалась.",
       "audiobookAvailable": "К заявке прикреплена аудиоверсия."
     }
+  },
+  "audiobooks": {
+    "loading": "Загружаем аудиокниги...",
+    "error": "Не удалось загрузить аудиокниги. Попробуйте ещё раз.",
+    "empty": {
+      "title": "Аудиокниг пока нет",
+      "description": "Загляните позже или посмотрите другие разделы."
+    },
+    "unknownAuthor": "Автор не указан"
   },
   "reading-overlay": {
     "toggle-font-size": "Шрифт",
