--- a/src/shared/config/i18n/locales/uk/translation.json
+++ b/src/shared/config/i18n/locales/uk/translation.json
@@ -31,6 +31,7 @@
     "label": "Головна навігація",
     "account": "Мій акаунт",
     "books": "Книги",
+    "audiobooks": "Аудіокниги",
     "settings": "Налаштування"
   },
   "footer": {
@@ -606,6 +607,15 @@
     "subtitle": "Потрібна допомога? Ми поруч.",
     "description": "Напишіть нашій команді підтримки в Telegram — і ми відповімо найближчим часом.",
     "telegramCta": "Відкрити @lawyerdsupport"
+  },
+  "audiobooks": {
+    "loading": "Завантажуємо аудіокниги...",
+    "error": "Не вдалося завантажити аудіокниги. Спробуйте ще раз.",
+    "empty": {
+      "title": "Поки що немає аудіокниг",
+      "description": "Загляньте пізніше або перегляньте інші розділи."
+    },
+    "unknownAuthor": "Автор не вказаний"
   },
   "reading-overlay": {
     "toggle-font-size": "Розмір шрифту",
